# vpi-stereo-disparity

./: .gitignore  CMakeLists.txt  Capture.cpp  camera_extrinsics.xml  camera_intrinsics.xml  main.cpp
include/: Capture.hpp
